# influxdb-grafana-dashboard

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tasks.py
src/: main.py
