[tool.poetry]
name = "price-checker"
version = "0.1.0"
description = ""
authors = ["Amane Suzuki <amane.suzu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
influxdb-client = "^1.24.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
