[tool.poetry]
name = "price-checker"
version = "0.1.0"
description = ""
authors = ["Amane Suzuki <amane.suzu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
influxdb-client = "^1.24.0"
requests-async = "^0.6.2"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
invoke = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
